[package]
name = "contract"
version = "0.1.0"
authors = ["Hadi Saleh <hadi@creatoros.co>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-std = { version = "1.5.0", features = [
    "cosmwasm_1_3"
]}
schemars = "0.8.15"
serde = { version = "1.0.189", default-features = false, features = [
    "derive",
    "alloc",
] }
cw-storage-plus = { version = "1.1.0"}


